--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -23,7 +23,7 @@
   "services": {
     "title": "Unsere Leistungen",
     "s1": "Globales Tracking",
-    "s1description": "Unsere GPS-Tracking-Lösung ermöglicht eine globale Sendungsverfolgung mit Echtzeit-Updates und optimiert so die Logistikprozesse in ganz Europa. Es sorgt für eine reibungslose Auftragsverwaltung, verbesserte Kommunikation, Transparenz und einen robusten Datenschutz.",
+    "s1description": "Unsere GPS-Tracking-Lösung ermöglicht globale Sendungsverfolgung mit Echtzeit-Updates, optimiert Logistikprozesse in Europa und verbessert Auftragsverwaltung, Kommunikation, Transparenz und Datenschutz.",
     "s2": "Lieferung am selben Tag",
     "s2description": "Für dringende Lieferungen ist unser Same-Day-Shipping-Service die perfekte Lösung. Wir holen Ihre Pakete noch am selben Tag ab und liefern sie zu. So gewährleisten wir Schnelligkeit und Zuverlässigkeit für Ihre zeitkritischen Anforderungen.",
     "s3": "Internationaler Versand",
