--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -34,7 +34,7 @@
   "team": {
     "title": "Lernen Sie unser Team kennen",
     "member1": "CEO",
-    "member2": "Personalwesen, Buchhaltung",
+    "member2": "HR & Buchhaltung",
     "member3": "CTO"
   },
   "contact": {
