--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,7 +18,17 @@
   },
   "about": {
     "title": "About Us",
-    "description": "Rapid Kurier GmbH, based in Rüsselsheim, is registered in the commercial register with the legal form of a limited liability company. The company is registered at the local court in 64283 Darmstadt under the commercial register number HRB 105179. The company is economically active. The last change in the commercial register was made on November 9th, 2023. The company is currently run by a manager (1 x managing director). There is a partner involved in the company. The company has one location."
+    "description": "Rapid Kurier GmbH, based in Rüsselsheim, is registered in the commercial register with the legal form of a limited liability company. The company is registered at the local court in 64283 Darmstadt under the commercial register number HRB 105179. The company is economically active. The last change in the commercial register was made on November 9th, 2023. The company is currently run by a manager (1 x managing director). There is a partner involved in the company. The company has one location.",
+    "certificates": {
+      "hellmann": {
+        "title": "Hellmann Worldwide Logistics",
+        "subtitle": "Certified Logistics Partner"
+      },
+      "pq": {
+        "title": "PQ KEP",
+        "subtitle": "Courier, Express and Parcel Service Prequalification"
+      }
+    }
   },
   "services": {
     "title": "Our Services",
